# ai-agent

./: README.md  config.py  main.py  pyproject.toml  tests.py
calculator/: lorem.txt
functions/: get_file_content.py  get_files_info.py  run_python.py  write_file.py
